Bug 1908239 - Make `HTMLEditor::FocusedElementOrDocumentBecomesNotEditable` set `HTMLEditor::mIsInDesignMode` r=m_kato

This is a simple mistake, it does not reset `mIsInDesignMode` when it emulates
a "blur".

Additionally, I realized that it does not check whether the focused element is
in the document or not and emulates "focus" of itself it the focused element is
in a different document.  In such case, the editor shouldn't have focus, so,
this is a hidden bug, but "blur" notification may occur asynchronously.
Therefore, this could be a bug only in some edge cases.

Differential Revision: https://phabricator.services.mozilla.com/D216907